Fix simple column, some extra code cleanup
Signed-off-by: Daniel Henneberger <git@danielhenneberger.com>